umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_ketcher_Unable to save canvas to MOL - system throws an error-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 172
bond_count: 250
sum_formula: C140BCl3F4Fe5N2O10P6S-1
graph6: "~?Aks_??CA?_A?D?C?C??O???????G??O??O??C??@???E???O???O???G???AG???G????_?????????G????G????C?????_????C?????K?????O?????K?????A??????P??????_?????@??????????????C??????B???????O??????@???????A???????A???O??P@_??????????????Do????????S???????AG???????GO???????_???????A_????????@X_????O???C_????????G?????????G??????g?????????C?????????_??????????????W??????????_??????G???_?????C???????????????C????????OE?????????`?_??????_???A??????????o???????????GE?@???????A????????????????C?????????????????????????G????????????O????????????G????????????B???????AO??_??????????C??O????????@???????????????????A?????????G???@????????C?????O????????????O???????????????C??????????????O????????????G?O??????????????O????????????G????????????????@???????????????G???????????????O???????????????P???????????????G???????????????A????????????????O?????????????O??O????????????????o????????A??????????????????????A?C?????????????????????????????????_?????????????G????_????????????????E???????????_????_G?????????????_???A?????G????????????_??????G???_G?????G?????????????????O_????????????C_???????????GE??C??_??????????????G???_????????????G????????????????????@?????????G???????????????__?????????????????????@???????????????????@???????????????C????_??????????????????????????????????C????@????????????A???????C??????????????A???_?????????????????_???@?????????????????_??@?????????????????????G????????????@?????G???????????????????????@?????????????O???????@????????O????????????????????@_?????????????????????O?????_????????????@?????????????_????????????????A????????_?????????????????????@??????????????G????????G??????????????????????????????A??????????????@?????????????????_?O???G???????????????C????????????????????????O?G??C??????????????????O???????????????????????O??????????????????????????????O???????????????????????A????????????????????????K????????????????????????G????????????????????????G????????????????????????G????????????????????????A?????????????????????????_????????????????????????@?????????????????????????B?????@????????????C?????????????????????????????????_?????_???A?????????????????????O???????????????????A??????????????????????????O??????????????????????_?????????????????????????@???????????????????????????????G??????????????????????????B?????????????????C_????????????????????????????????????????????????????????????G??@?????????????????O?????????A??????????????????C?????????????????????????????????????????????????????????????????@"
